<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/frame">

    <EditText
        android:id="@+id/router_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/router_name" />

    <EditText
        android:id="@+id/router_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/router_password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/connect_ap"
            android:onClick="connectAPHandler" />

        <Button
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/connect_station"
            android:onClick="connectStationHandler" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/router_login"
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/router_login"
            android:onClick="routerLoginHandler" />

        <Button
            android:id="@+id/get_ip"
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/get_ip"
            android:onClick="getIPHandler" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/disconnect"
            android:onClick="disconnectHandler" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        style="@style/text" />

    <SeekBar
        android:id="@+id/seek_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        style="@style/bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        style="@style/text" />

    <SeekBar
        android:id="@+id/seek_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        style="@style/bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        style="@style/text" />

    <SeekBar
        android:id="@+id/seek_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        style="@style/bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hue"
        style="@style/text" />

    <SeekBar
        android:id="@+id/seek_hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="240"
        android:progress="0"
        style="@style/bar" />

</LinearLayout>
